# PiPicoMCPPlatform

./: CLAUDE.md  CMakeLists.txt  README.md  pico_sdk_import.cmake
actuators/include/: gpio_actuator.h  pwm_actuator.h
actuators/src/: gpio_actuator.cpp  pwm_actuator.cpp
app/: main.cpp
include/: actuator.h  actuator_registry.h  json_builder.h  json_scanner.h  mcp_request.h  mcp_server.h  platform_config.h  sensor.h  sensor_registry.h  transport.h  usb_cdc_transport.h
sensors/include/: adc_sensor.h  gpio_sensor.h  internal_temp_sensor.h
sensors/src/: adc_sensor.cpp  gpio_sensor.cpp  internal_temp_sensor.cpp
src/: actuator_registry.cpp  json_builder.cpp  json_scanner.cpp  mcp_server.cpp  sensor_registry.cpp  usb_cdc_transport.cpp
